--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,3 +5,17 @@
     text-align: center;
     padding-top: 10px;
 }
+.header nav{
+    background: #030010;
+    line-height: 41px;
+    text-align: left;
+}
+nav a{
+    text-decoration: none;
+    color: white;
+    padding: 10px 20px;
+}
+
+nav a:hover{
+    background: grey;
+}
