--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,3 +19,10 @@ nav a{
 nav a:hover{
     background: grey;
 }
+
+@media screen and (max-width:480px){
+    nav a{
+        font-size: 12px;
+        padding:10px
+    }
+}
