--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -11,3 +11,12 @@
     width: 30%;
     text-align: center;
 }
+
+@media screen and (max-width:480px){
+    body{
+        font-size: 13px;
+    }
+    .shop-container{
+        width:100%;
+    }
+}
